@@ -9,5 +9,7 @@
 $_lang['clear'] = 'Clear';
 $_lang['error_log'] = 'Error Log';
 $_lang['error_log_desc'] = 'Here is the error log for MODX Revolution:';
+$_lang['error_log_download'] = 'Download Error Log ([[+size]])';
+$_lang['error_log_too_large'] = 'The error log at <em>[[+name]]</em> is too large to be viewed. You can download it via the button below.';
 $_lang['system_events'] = 'System Events';
 $_lang['priority'] = 'Priority';
